--- a/css/styles.css
+++ b/css/styles.css
@@ -6,38 +6,8 @@
     NEG:(Black) 
 */
 
-.Top-Container {
-    background-color: black;
-    margin: 0px;
-}
-
-.Middle-Container {
-    margin-top: 100px;
-    height: 500%;
-}
-
-#nonprofit {
+#title {
     background-color: blue;
-    position: absolute;
-    left: 0px;
-    width: 33.3%;
-    height: 500px;
-}
-
-#barbershop {
-    background-color: #EDF2F6;
-    position: absolute;
-    left: 33.3%;
-    width: 33.3%;
-    height: 500px;
-}
-
-#incncompany {
-    background-color: red;
-    position: absolute;
-    left: 66.6%;
-    width: 33.3%;
-    height: 500px;
 }
 
 body {
