--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 */
 
 #title {
-    background-color: blue;
+    
 }
 
 body {
@@ -18,6 +18,7 @@ body {
 
 p {
     color: #EDF2F6;
+    font-family: 'Gruppo', cursive;
 }
 
 hr {
