--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,19 @@
 */
 
 #title {
-    
+    background-color: black;
+}
+
+.container-fluid {
+    padding: 3% 15%;
+}
+
+#homeLogo {
+    height: 20rem;
+}
+
+#Windows {
+    font-family: 'Gruppo', cursive;
 }
 
 body {
