--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,11 @@ p {
     font-family: 'Gruppo', cursive;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
 hr {
     border-style: none;
 }
