--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,11 @@
 
 #title {
     background-color: black;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
 }
 
 .container-fluid {
-    padding: 1% 10%;
+    padding: 3% 10% 10% 10%;
 }
 
 
