--- a/css/styles.css
+++ b/css/styles.css
@@ -22,13 +22,18 @@
 #mantra {
     padding-top: 5%;
     font-size: x-large;
-    font-weight: bolder;
+    color: #EDF2F6;
 }
 
 /* About Section */
 #about-section {
     padding-top: 10%;
     background-color: #EDF2F6;
+    background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.9) 100%), url(../Images/compassNeg.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: bottom right;
+    
 }
 #about-text {
     padding-top: 5%;
@@ -37,7 +42,7 @@
     font-size: calc(1rem + .5vw);
 }
 .home-buttons {
-    padding-top: 5%;
+    padding: 5% 10% 10% 10%;
 }
 #home-join:hover {
     background-color: red;
@@ -78,9 +83,11 @@
 }
 
 /* Footer/Legal */
-/*
 .footer-legal {
-    text-decoration-color: blanchedalmond;
+    text-decoration-color: #EDF2F6;
+}
+#att {
+    color: #EDF2F6;
 }
 */
 /* Global */
@@ -104,7 +111,7 @@ a:hover {
     color: #EDF2F6;
 }
 body {
-    background-color: black;
+    background-color: #1a1918;
     margin: 0px;
     text-align: center;
 }
