--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@
 #about-section {
     padding-top: 10%;
     background-color: #EDF2F6;
-    background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.9) 100%), url(../Images/compassNeg.png);
+    background-image: linear-gradient(to top, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.9) 100%), url(../Images/compassNeg.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: bottom right;
