--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,6 +101,22 @@ h4 {
     display: none;
 }
 
+/* Family Nav */
+
+.family-nav {
+    margin: 5px 0px;
+    background: var(--secodary);
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, .2);
+}
+
+.family-nav ul {
+    display: flex;
+    justify-content: space-around;
+}
+
+
+/* ***** Landing Site ****** */
+
 #header {
     padding: 0px 20px;
     background: url(../assets/KC.png);
@@ -278,6 +294,7 @@ h4 {
     text-align: center;
     font-size: small;
     padding: 20px;
+    height: 10vh;
 }
 
 #legal li {
@@ -294,6 +311,9 @@ h4 {
     font-size: x-small;
     display: flex;
 }
+
+
+/* ***** Clothing Site ****** */
 
 
 /* Small Tablet Styles */
