--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,7 +106,7 @@ h4 {
 .family-nav {
     margin: 5px 0px;
     background: var(--secodary);
-    box-shadow: 1px 2px 3px rgba(0, 0, 0, .2);
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, .05);
 }
 
 .family-nav ul {
@@ -114,6 +114,36 @@ h4 {
     justify-content: space-around;
 }
 
+/* Family Header */
+
+#family-header {
+    padding: 0px 20px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 35vh; 
+}
+
+#family-header h3 {
+    margin-top: 0px;
+    display: flex;
+    justify-content: center;
+    padding-top: 25%;
+    color: var(--secodary);
+    text-shadow: 1px 2px 3px rgba(0, 0, 0, .75);
+}
+
+.barbershop {
+    background: url('../assets/clippers.png');
+}
+
+.store {
+    background: url('../assets/carl.png');
+}
+
+.foundation {
+    background: url('../assets/help.png');
+}
 
 
 /* ***** Landing Site ****** */
