--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,7 +106,6 @@ h4 {
 .family-nav {
     margin: 5px 0px;
     background: var(--secodary);
-    box-shadow: 1px 2px 3px rgba(0, 0, 0, .05);
 }
 
 .family-nav ul {
@@ -150,6 +149,74 @@ h4 {
 #about-family {
     text-align: center;
     padding: 20px 30px;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, .25);
+}
+
+/* Foundation Testimonial */
+
+.testimony {
+    background: rgba(0, 0, 0, .25);
+    padding: 10px 30px;
+}
+
+.testimony h3 {
+    color: var(--secodary);
+    text-align: center;
+    text-shadow: 1px 2px 3px rgba(0, 0, 0, .25);
+}
+
+.feature-cards {
+    color: var(--primary);
+    text-align: left;
+}
+
+.feature-cards {
+	background-color: #fff;
+	border-radius: 20px;
+	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+	overflow: hidden;
+	max-width: 100%;
+	width: 400px;
+    margin: 10px 0px;
+    height: 20vh;
+}
+
+.card-body {
+	padding: 20px 20px;
+}
+
+.card-body p {
+	color: #555;
+	font-size: small;
+	line-height: 20px;
+	margin: 0;
+    text-shadow: 1px 2px 3px rgba(0, 0, 0, .1);
+}
+
+.card-footer {
+	background-color: var(--pop2);
+	color: #fff;
+	padding: 5px;
+	text-align: center;
+}
+
+.card-footer h3 {
+	margin: 10px 0;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+    text-shadow: 1px 2px 3px rgba(0, 0, 0, .25);
+}
+
+/* Foundation Donations */
+
+#donate {
+    text-align: center;
+    padding: 20px 30px;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, .25);
+}
+
+.donate-links {
+    padding: 20px;
 }
 
 
@@ -348,6 +415,7 @@ h4 {
     margin-top: 10px;
     font-size: x-small;
     display: flex;
+    color: var(--primary);
 }
 
 
