--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,6 +152,9 @@ h4 {
     box-shadow: 1px 2px 3px rgba(0, 0, 0, .25);
 }
 
+
+/* ***** Foundation Site ****** */
+
 /* Foundation Testimonial */
 
 .testimony {
@@ -219,6 +222,101 @@ h4 {
     padding: 20px;
 }
 
+/* ***** Clothing Site ****** */
+
+#shop {
+    text-align: center;
+    padding: 20px 30px;
+    background: rgba(0, 0, 0, .25);
+}
+
+.store-cards {
+    background: var(--secodary);
+    display: flex;
+    flex-direction: column;
+    border-radius: 25px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.store-cards img {
+    width: 75%;
+    margin: 0px;
+    border-radius: 25px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.store-cards a {
+    color: var(--primary);
+    font-weight: 500;
+}
+
+#shop .card-footer {
+    background-color: var(--secodary);
+    padding-bottom: 20px;
+    border-radius: 25px;
+}
+
+#shop-items {
+    padding: 20px 30px;
+}
+
+#shop-items a {
+    font-family: 'Merriweather';
+    color: var(--primary);
+}
+
+
+/* ***** Barbershop Site ****** */
+
+#booking {
+    text-align: center;
+    padding: 20px 30px;
+    background: var(--primary);
+}
+
+#booking h3 {
+    color: var(--pop2);
+    text-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+#booking form {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+
+#booking input {
+    margin: 10px;
+    border-radius: 25px;
+    border: 2px solid var(--pop2);
+    color: var(--pop2);
+}
+
+#booking select {
+    margin-bottom: 20px;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    background: rgba(255, 255, 255, .05);
+    color: var(--pop2);
+    border: 2px solid var(--pop2);
+    border-radius: 10px;
+    padding: 10px 10px;
+}
+
+#booking button {
+    background: rgba(255, 255, 255, .05);
+    border: 2px solid var(--pop2);
+    color: var(--pop2);
+    width: 50%;
+    margin: auto;
+}
+
+#booking button:hover {
+    background: rgba(255, 255, 255, .05);
+    border: 2px solid var(--primary);
+    color: var(--primary);
+}
 
 /* ***** Landing Site ****** */
 
@@ -347,7 +445,7 @@ h4 {
 
 
 #contact {
-     padding: 30px 0; 
+    padding: 30px 0; 
     background: var(--primary);
 }
 
@@ -368,6 +466,9 @@ h4 {
     width: 75%;
     max-width: 400px;
     margin: 10px 5px;
+    border: 2px solid var(--pop2);
+    border-radius: 25px;
+    color: var(--pop2);
 }
 
 #contact button {
@@ -407,6 +508,10 @@ h4 {
     padding: 0px 20px;
 }
 
+#legal a {
+    color: var(--primary);
+}
+
 .socials {
     margin-top: 10px;
 }
@@ -415,11 +520,8 @@ h4 {
     margin-top: 10px;
     font-size: x-small;
     display: flex;
-    color: var(--primary);
 }
 
-
-/* ***** Clothing Site ****** */
 
 
 /* Small Tablet Styles */
