--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,6 +61,60 @@ input, textarea {
     color: var(--tertiary);
 }
 
+/* Modals */
+.su-modal-bg {
+    background: rgba(0, 0, 0, .8);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.su-modal-contents {
+    height: fit-content;
+    width: 50%;
+    background: var(--secodary);
+    text-align: center;
+    padding: 40px;
+    position: relative;
+    border-radius: 20px;
+}
+
+.su-modal-contents input {
+    margin: 5px 0;
+}
+
+.button {
+    border: 1px solid #555;
+    margin: 10px 0px;
+
+}
+
+.button:hover {
+    border: #555;
+    color: #555;
+}
+
+.close {
+    border: none;
+    box-shadow: none;
+    font-size: 45px;
+    font-family: 'Courier New', Courier, monospace;
+    transform: rotate(45deg);
+    position: absolute;
+    top: 0;
+    right: 10px;
+    cursor: pointer;
+}
+
+.close:hover {
+    border: none;
+    color: #555;
+}
+
 /* Fonts */
 @font-face {
     font-family: 'Merriweather';
@@ -367,7 +421,6 @@ h4 {
     gap: 25px;
     justify-content: center;
 }
-
 
 
 #about h3 {
