--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,6 +61,7 @@ input, textarea {
     color: var(--tertiary);
 }
 
+
 /* Modals */
 .su-modal-bg {
     background: rgba(0, 0, 0, .8);
@@ -80,17 +81,17 @@ input, textarea {
     text-align: center;
     padding: 40px;
     position: relative;
-    border-radius: 20px;
 }
 
-.su-modal-contents input {
-    margin: 5px 0;
+.su-modal-contents form {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
 }
 
 .button {
     border: 1px solid #555;
     margin: 10px 0px;
-
 }
 
 .button:hover {
@@ -125,12 +126,13 @@ input, textarea {
     src: url('fonts/Montserrat/Montserrat-VariableFont_wght.ttf');
 }
 
-h1, h2, h3, h4, button {
+h1, h2, h3, h4 {
     font-family: 'Merriweather';
 }
 
-p, a, li {
+p, a, li, button {
     font-family: 'Montserrat';
+    color: var(--primary);
 }
 
 h2 {
@@ -380,6 +382,7 @@ h4 {
     background: url(../assets/KC.png);
     background-size: cover;
     background-repeat: no-repeat;
+    height: 40vh;
 }
 
 .header-logo {
@@ -393,127 +396,133 @@ h4 {
     width: 50%;
 }
 
-.header-title {
-    grid-column: 1/4;
-    grid-row: 1;
-    font-size: large;
-}
-
 .header-text {
     grid-column: 1/9;
     grid-row: 3;
     text-align: center;
     padding-top: 15px;
+}
+
+.header-text P {
     color: var(--secodary);
     padding-bottom: 20px;
     font-weight: 600;
-}
-
-.header-nav {
-    padding-top: 10px;
-    grid-column: 6/9;
-    grid-row: 1;
-    justify-content: center;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .75);
 }
 
 .h-nav {
     display: flex;
-    gap: 25px;
-    justify-content: center;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1.5rem;
+    margin: .5rem 1rem;
+}
+
+.title {
+    margin-right: auto;
+}
+
+.title h1 {
+    color: var(--primary);
 }
 
 
-#about h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
 
-.about-text p {
-    margin: 10px;
-    grid-column: 1/9;
+#about {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    margin: 3rem 2rem;
     text-align: center;
 }
 
 .about-links {
-    padding: 10px;
-    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: 0 auto;
+    gap: .5rem;
 }
 
-.about-links button{
-    margin: 5px;
-    padding: 5px;
-    grid-column: 2/8;
-}
 
 #services {
-    background: var(--primary);
-    padding: 20px 0px;
-}
-
-#services h3 {
-    color: var(--pop2);
-    text-align: center;
-}
-
-.service-cards a {
-    grid-column: 1/9;
+    background: rgba(0, 0, 0, .2);;
     display: flex;
-    margin: 10px 0;
-}
-
-.service-cards img {
-    width: 100%;
-    height: 35vh;
-    object-fit: cover;
-    border-radius: 50px;
-    border: 2px solid var(--pop2);
-}
-
-.service-cards a *{
-    margin: 0 20px;
-    max-width: 50%;
-    align-self: center;
-    font-size: smaller;
-    color: var(--pop2);
+    flex-direction: column;
+    gap: 2rem;
     text-align: center;
+    padding: 3rem 2rem;
+}
+
+#services h2 {
+    color: var(--pop2);
+}
+
+.service-cards {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.card {
+    background-color: var(--pop2);
+    width: 50%;
+    border-radius: 20px;
+    border: 1px solid var(--tertiary);
+    margin: 0 auto;
+}
+
+.card-head img {
+    width: 100%;
+    height: 120px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.card-foot {
+    text-align: center;
+    padding: 1rem;
+    font-style: normal;
 }
 
 
 
 #podcast {
     background: var(--secodary);
-    margin: 0px;
-    padding: 10px;
-}
-
-#podcast h3 {
+    margin: 3rem 2rem;
     text-align: center;
-    margin-top: 0px;
-    padding: 20px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
 }
 
-#padding iframe {
+
+#podcast iframe {
     background: rgba(0, 0, 0, .2);
+    border: 1px solid var(--primary);
+    border-radius: 5px;
 }
 
 
 
 #contact {
-    padding: 30px 0; 
-    background: var(--primary);
+    padding: 3rem 2rem;
+    background-color: rgba(0, 0, 0, .2);
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 
-#contact h3, #contact p {
+#contact h2, #contact p {
     text-align: center;
     color: var(--pop2);
     margin-bottom: 0;
 }
 
 #contact form {
-    /* width: 80%; */
-    /* max-width: 400px; */
-    margin: 20px;
-    text-align: center;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 
 #contact input, #contact textarea {
@@ -522,29 +531,32 @@ h4 {
     margin: 10px 5px;
     border: 2px solid var(--pop2);
     border-radius: 25px;
-    color: var(--pop2);
+    color: var(--primary);
 }
 
 #contact button {
     margin: 10px auto;
     background: var(--pop2);
+    border: 1px;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, .6);
 }
 
 #contact button:hover {
     background: var(--primary);
-    border: 2px solid;
-    border-color: var(--pop2);
     color: var(--pop2);
 }
 
 #contact ul {
-    width: 75%;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    width: 90%;
     margin: auto;
-    padding: 10px; 
+    padding: 16px; 
     color: var(--pop2);
     text-align: center;
     background-color: rgba(255, 255, 255, .06);
-    border-radius: 50px;
+    border-radius: 5px;
     box-shadow: 1px 2px 3px rgba(0, 0, 0, .6);
 }
 
@@ -552,7 +564,7 @@ h4 {
 
 #legal {
     text-align: center;
-    font-size: small;
+    font-size: x-small;
     padding: 20px;
     height: 10vh;
 }
