--- a/styles/styles.css
+++ b/styles/styles.css
@@ -166,7 +166,14 @@ h4 {
 
 .family-nav ul {
     display: flex;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 1rem 1.5rem;
+    gap: 1.5rem;
+}
+
+.family-nav #home-tag {
+    margin-right: auto;
 }
 
 /* Family Header */
@@ -183,7 +190,7 @@ h4 {
     margin-top: 0px;
     display: flex;
     justify-content: center;
-    padding-top: 25%;
+    padding-top: 35%;
     color: var(--secodary);
     text-shadow: 1px 2px 3px rgba(0, 0, 0, .75);
 }
@@ -204,8 +211,7 @@ h4 {
 
 #about-family {
     text-align: center;
-    padding: 20px 30px;
-    box-shadow: 1px 2px 3px rgba(0, 0, 0, .25);
+    margin: 5rem 2rem;
 }
 
 
@@ -215,7 +221,10 @@ h4 {
 
 .testimony {
     background: rgba(0, 0, 0, .25);
-    padding: 10px 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 3rem;
 }
 
 .testimony h3 {
@@ -271,11 +280,16 @@ h4 {
 #donate {
     text-align: center;
     padding: 20px 30px;
-    box-shadow: 1px 2px 3px rgba(0, 0, 0, .25);
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    margin: 4rem 2rem;
 }
 
 .donate-links {
-    padding: 20px;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
 }
 
 /* ***** Clothing Site ****** */
