--- a/styles/styles.css
+++ b/styles/styles.css
@@ -434,12 +434,16 @@ h4 {
 
 .title {
     margin-right: auto;
+    margin-top: 10px;
 }
 
-.title h1 {
+.title h2 {
     color: var(--primary);
 }
 
+.title a {
+    text-decoration: none;
+}
 
 
 #about {
@@ -471,34 +475,6 @@ h4 {
 #services h2 {
     color: var(--pop2);
 }
-
-.service-cards {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.card {
-    background-color: var(--pop2);
-    width: 50%;
-    border-radius: 20px;
-    border: 1px solid var(--tertiary);
-    margin: 0 auto;
-}
-
-.card-head img {
-    width: 100%;
-    height: 120px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-}
-
-.card-foot {
-    text-align: center;
-    padding: 1rem;
-    font-style: normal;
-}
-
 
 
 #podcast {
