--- a/styles/styles.css
+++ b/styles/styles.css
@@ -476,6 +476,13 @@ h4 {
     color: var(--pop2);
 }
 
+.card img {
+    width: 100%;
+    height: 120px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
 
 #podcast {
     background: var(--secodary);
