--- a/styles/styles.css
+++ b/styles/styles.css
@@ -476,12 +476,29 @@ h4 {
     color: var(--pop2);
 }
 
+.service-cards {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.card {
+    background-color: var(--pop2);
+    width: 50%;
+    border-radius: 20px;
+    border: 1px solid var(--tertiary);
+    margin: 0 auto;
+}
+
 .card img {
     width: 100%;
     height: 120px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
+
+
+
 
 
 #podcast {
