Adjust Newsletter and Directory

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -498,15 +498,13 @@ h4 {
 }
 
 
-
-
-
 #podcast {
     background: var(--secodary);
     margin: 3rem 2rem;
     text-align: center;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1.5rem;
 }
 
