--- a/styles/styles.css
+++ b/styles/styles.css
@@ -526,6 +526,8 @@ h4 {
     background: rgba(0, 0, 0, .2);
     border: 1px solid var(--primary);
     border-radius: 5px;
+    margin: auto;
+    display: none;
 }
 
 
