--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@ Palette: Pri: Black    #Black
     --tertiary: #36454f;
     --pop1: #004687;
     --pop2: #BD9B60;
+    --pop3: #E31837;
 }
 
 /* Reset */
@@ -284,7 +285,7 @@ h4 {
     flex-direction: column;
     gap: 1.5rem;
     margin: 4rem 2rem;
-    background-color: var(--tertiary);
+    background-color: var(--pop2);
     border: 2px solid var(--primary);
     box-shadow: 1px 2px 3px rgba(0, 0, 0, .25);
     color: #fff;
@@ -297,6 +298,8 @@ h4 {
 
 .donate-join input{
     background-color: var(--secodary);
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, .25);
+
 }
 
 .donate-join button {
@@ -310,7 +313,10 @@ h4 {
 #shop {
     text-align: center;
     padding: 20px 30px;
-    background: rgba(0, 0, 0, .25);
+    background: var(--pop2);
+    color: var(--secodary);
+    text-shadow: 1px 2px 3px rgba(0, 0, 0, .25);
+    border: 2px solid var(--primary);
 }
 
 .store-cards {
@@ -354,12 +360,14 @@ h4 {
 #booking {
     text-align: center;
     padding: 20px 30px;
-    background: var(--primary);
+    background: var(--pop2);
+    border: 2px solid var(--primary);
 }
 
 #booking h3 {
-    color: var(--pop2);
+    color: var(--secodary);
     text-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    text-shadow: 1px 2px 3px rgba(0, 0, 0, .75);
 }
 
 #booking form {
@@ -452,6 +460,7 @@ h4 {
 
 .title h2 {
     color: var(--primary);
+    text-shadow: .5px 1px 1px rgba(0, 0, 0, .75);
 }
 
 .title a {
@@ -467,6 +476,10 @@ h4 {
     text-align: center;
 }
 
+#about h2 {
+    text-shadow: 0px .5px 2px rgba(0, 0, 0, .75);
+}
+
 .about-links {
     display: flex;
     flex-direction: column;
@@ -477,16 +490,17 @@ h4 {
 
 
 #services {
-    background: rgba(0, 0, 0, .2);;
+    background: var(--pop1);
     display: flex;
     flex-direction: column;
     gap: 2rem;
     text-align: center;
-    padding: 3rem 2rem;
+    padding: 3rem 1rem;
 }
 
 #services h2 {
     color: var(--pop2);
+    text-shadow: 1px 2px 3px rgba(0, 0, 0, .75);
 }
 
 .service-cards {
@@ -499,7 +513,7 @@ h4 {
     background-color: var(--pop2);
     width: 50%;
     border-radius: 20px;
-    border: 1px solid var(--tertiary);
+    border: 2px solid var(--primary);
     margin: 0 auto;
 }
 
@@ -534,7 +548,7 @@ h4 {
 
 #contact {
     padding: 3rem 2rem;
-    background-color: rgba(0, 0, 0, .2);
+    background-color: var(--pop1);
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -544,6 +558,7 @@ h4 {
     text-align: center;
     color: var(--pop2);
     margin-bottom: 0;
+    text-shadow: 1px 2px 3px rgba(0, 0, 0, .75);
 }
 
 #contact form {
@@ -558,7 +573,8 @@ h4 {
     margin: 10px 5px;
     border: 2px solid var(--pop2);
     border-radius: 25px;
-    color: var(--primary);
+    color: var(--secodary);
+    background-color: rgba(255, 255, 255, .25);
 }
 
 #contact button {
@@ -580,9 +596,9 @@ h4 {
     width: 90%;
     margin: auto;
     padding: 16px; 
-    color: var(--pop2);
+    color: var(--pop1);
     text-align: center;
-    background-color: rgba(255, 255, 255, .06);
+    background-color: rgba(255, 255, 255, .25);
     border-radius: 5px;
     box-shadow: 1px 2px 3px rgba(0, 0, 0, .6);
 }
