--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,60 +63,6 @@ input, textarea {
 }
 
 
-/* Modals */
-.su-modal-bg {
-    background: rgba(0, 0, 0, .8);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.su-modal-contents {
-    height: fit-content;
-    width: 50%;
-    background: var(--secodary);
-    text-align: center;
-    padding: 40px;
-    position: relative;
-}
-
-.su-modal-contents form {
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-}
-
-.button {
-    border: 1px solid #555;
-    margin: 10px 0px;
-}
-
-.button:hover {
-    border: #555;
-    color: #555;
-}
-
-.close {
-    border: none;
-    box-shadow: none;
-    font-size: 45px;
-    font-family: 'Courier New', Courier, monospace;
-    transform: rotate(45deg);
-    position: absolute;
-    top: 0;
-    right: 10px;
-    cursor: pointer;
-}
-
-.close:hover {
-    border: none;
-    color: #555;
-}
-
 /* Fonts */
 @font-face {
     font-family: 'Merriweather';
@@ -191,7 +137,7 @@ h4 {
     margin-top: 0px;
     display: flex;
     justify-content: center;
-    padding-top: 35%;
+    padding-top: 10rem;
     color: var(--secodary);
     text-shadow: 1px 2px 3px rgba(0, 0, 0, .75);
 }
@@ -208,11 +154,9 @@ h4 {
     background: url('../assets/help.png');
 }
 
-/* Family About */
-
 #about-family {
     text-align: center;
-    margin: 5rem 2rem;
+    padding: 2.5rem;
 }
 
 
@@ -635,14 +579,16 @@ h4 {
 
 /* Small Tablet Styles */
 @media screen and (min-width: 620px) {
-    
+    #about-family {
+        
+    }
 }
 
 /* Large Tablets & Laptops Styles */
 @media screen and (min-width: 960px) {
     
     body {
-        font-size: 18px;
+        font-size: 19px;
     }
 }
 
@@ -650,7 +596,7 @@ h4 {
 @media screen and (min-width: 1200px) {
     
     body {
-        font-size: 20px;
+        font-size: 24px;
     }
 }
 
