--- a/styles/styles.css
+++ b/styles/styles.css
@@ -291,7 +291,7 @@ h4 {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    margin: 4rem 6rem;
+    margin: 4rem auto;
     background-color: var(--pop2);
     border: 2px solid var(--primary);
     box-shadow: 1px 2px 3px rgba(0, 0, 0, .25);
